envoyfilter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-proc-filter
  namespace: eshop  # Replace with your namespace
spec:
  workloadSelector:
    labels:
      app: orders  # Replace with your application's label
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: ANY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_proc
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            grpc_service:
              google_grpc:
                target_uri: ersm.default.svc.cluster.local:50051  # Address of your external processor service
                stat_prefix: ext_proc
              timeout: 0.5s
            failure_mode_allow: false
            processing_mode:
              request_header_mode: SEND
